--- a/css/extra.css
+++ b/css/extra.css
@@ -459,7 +459,7 @@ input.reached-max-length {
 }
 
 @media screen and (max-width: 991px) {
-    .ReferAndEarnImage {
+    .HomeFormsImage {
         display: none;
     }
 }
