dynamic header footer

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -44,7 +44,7 @@
 /*  Basic Style 
 /* =================================== */
 body {
-  background: #e7e9ed;
+  background: #f6f7f8;
   color: #535b61;
   font-family: "Poppins", sans-serif;
   font-size: 14px;
