dynamic header footer 2

--- a/application/views/ForgotPasswordOtp.html
+++ b/application/views/ForgotPasswordOtp.html
@@ -335,17 +335,14 @@
                 </div>
             </div>
         </div>
-
     </div>
     <!-- Script -->
-
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="vendor/owl.carousel/owl.carousel.min.js"></script>
-    <script src="js/theme.js"></script>
-    <!-- <script src="js/extra.js"></script> -->
-    <!-- <script src="js/RateReview.js"></script> -->
-    <script src="vendor/bootstrap/js/getbootstrap.min.js"></script>
+    <script>
+        $(function () {
+            $("#header").load("Header.html");
+            $("#footer").load("Footer.html");
+        });
+    </script>
 
     <!--  -->
 </body>
