--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -44,7 +44,7 @@
 /*  Basic Style 
 /* =================================== */
 body {
-  background: #f6f7f8;
+  background: #e7e9ed;
   color: #535b61;
   font-family: "Poppins", sans-serif;
   font-size: 14px;
@@ -1541,8 +1541,8 @@ html[dir="rtl"] .login-signup ul.navbar-nav>li.dropdown:not(.notifications)>.dro
 
 .secondary-nav.nav .nav-link {
   text-align: center;
-  font-size: 13px;
-  font-size: 0.8125rem;
+  font-size: 14px;
+  /* font-size: 0.8125rem; */
   margin: 0 10px;
   padding: .6rem 15px;
   color: #8298af;
